--- a/css/adaptiv.css
+++ b/css/adaptiv.css
@@ -73,9 +73,9 @@
 		margin-top: 20px;
 		margin-bottom: 0px;
 	}
-	.youtube{
+	/*.youtube{
 		margin-top: 8%;
-	}
+	}*/
 }
 
 								/*phoneadapriv*/
